crates/compiler/tests/parse_errors/custom_type.elm
module Main exposing (..)

type Foo = 
